--- a/projeto_1/index.html
+++ b/projeto_1/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Decodificador de Texto</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" href="img/logo.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
             <p>
                 Digite um texto que você deseja criptografar ou descriptografar.
             </p>
-            <button class="semfundo" id="copy"onclick="copiar()">copy</button>
+            <button class="semfundo" id="copy"onclick="copiar()">copiar</button>
         </div>
     </div>
     <script src="index.js"></script>
