--- a/projeto_1/index.html
+++ b/projeto_1/index.html
@@ -15,8 +15,8 @@
         <textarea id="texto" placeholder="Digite seu Texto"></textarea>
         <div class="botoes">
             <img id="aviso" src="img/aviso.svg">
-            <button onclick="Criptografar()">Criptografar</button>
-            <button class="semfundo" onclick="Descriptografar()">Descriptografar</button>
+            <button onclick="enviartexto('criptografar')">Criptografar</button>
+            <button class="semfundo" onclick="enviartexto('descriptografar')">Descriptografar</button>
         </div>
         <div class="quadro">
             <img id="ilustracao" src="img/ilustracao.svg">
